src/snapshots/rlox__parse__tests__missing_parens.snap
---
source: src/parse.rs
expression: stderr
---
Error: 
   ╭─[<unknown>:1:13]
   │
 1 │ print ((1);
   │       ┬   ┬  
   │       ╰────── This ( is unmatched
   │           │  
   │           ╰── There should be a ) here
───╯

